--- a/blogpost.html
+++ b/blogpost.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-                El titulo del post
+                El titulo del proyecto
         </title>
         <link rel="stylesheet" href="Css/estilos.css">
     </head>
