--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                 </p>
                 <p>Suscribite y dale like</p>
             </div>
+            <div id="footer">
+                Hecho con amor en casa ♥️
+            </div>
         </div>
        
     </body>
