--- a/blogpost.html
+++ b/blogpost.html
@@ -14,9 +14,10 @@
             </div>
             <div id = "post">
                 <h1>Este es el titulo atractivo e interesante del post</h1>
-                <p>Este es el parrafo de inicio donde vamos a explicar las cosas
-                    increibles que se pueden hacer con ramas
+                <p>Este es el párrafo de inicio donde vamos a explicar las cosas
+                    increíbles que se pueden hacer con ramas
                 </p>
+                <p><img id = "gatito" src="imagenes/gatito.png" alt="gatito"></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
                 </p>
                 <p>Suscribite y dale like</p>
